# egraph-sandbox

./: .gitignore  README.md  subst2-pseudocode.rs
10-benchmark/slotted-rise/: Cargo.toml  trace.csv
10-benchmark/slotted-rise/src/: dbanalysis.rs  dblang.rs  dbrewrite.rs  lang.rs  main.rs  my_cost.rs  my_cost2.rs  rewrite.rs  trace.rs  tst.rs
3-miniegg-with-slots/: Cargo.toml  README.md  bench  bench.sh  diagram.py  main.sh  output
3-miniegg-with-slots/src/: ast.rs  debug.rs  egraph.rs  explain.rs  extract.rs  flex.rs  group.rs  group2.rs  i_lambda.rs  i_let.rs  lang.rs  lib.rs  main.rs  parse.rs  perm.rs  rewrite.rs  shape.rs  slotmap.rs  slottify.rs  small_step.rs  subst.rs  syntax.rs  tst.rs  tst2.rs  types.rs
3-miniegg-with-slots/src/ast/: mod.rs  parse.rs
3-miniegg-with-slots/src/egraph/: add.rs  check.rs  explain.rs  find.rs  mod.rs  union.rs
3-miniegg-with-slots/src/expl/: mod.rs
3-miniegg-with-slots/src/extract/: cost.rs  e2.rs  mod.rs  with_ord.rs
3-miniegg-with-slots/src/group/: api.rs  mod.rs  tst.rs
3-miniegg-with-slots/src/i_arith/: build.rs  mod.rs  my_cost.rs  rewrite.rs  tst.rs
3-miniegg-with-slots/src/i_array/: mod.rs  my_cost.rs  parse.rs  rewrite.rs  tst.rs
3-miniegg-with-slots/src/i_lambda/: big_step.rs  mod.rs  parse.rs  small_step.rs  subst.rs
3-miniegg-with-slots/src/i_let/: mod.rs  my_cost.rs  rewrite.rs  tst.rs
3-miniegg-with-slots/src/i_rise/: build.rs  mod.rs  my_cost.rs  rewrite.rs  tst.rs
3-miniegg-with-slots/src/i_sdql/: mod.rs  rewrite.rs
3-miniegg-with-slots/src/i_spores/: mod.rs
3-miniegg-with-slots/src/i_symbol/: mod.rs  tst.rs
3-miniegg-with-slots/src/pattern/: ematch.rs  enode_or.rs  enode_or_var.rs  mod.rs  pattern_subst.rs  rewrite.rs
3-miniegg-with-slots/src/perm/: cringe.rs  mod.rs  stabchain.rs
3-miniegg-with-slots/src/syntax/: ast_list.rs  (+1 more)
gen-finder/: Cargo.toml  out
gen-finder/src/: main.rs
(+105 files in other folders)
