[package]
name = "miniegg-with-slots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lamcalc = { path = "../lamcalc" }
fnv = "*"
symbol_table = { version = "0.3", features = ["global"]}
lazy_static = "*"

[profile.release]
debug = true
