[package]
name = "gen-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lamcalc = { path = "../lamcalc" }
miniegg-with-slots = { path = "../3-miniegg-with-slots" }
explicit-subst = { path = "../7-baseline-explicit-subst-improved" }
