[package]
name = "slotted-rise"
version = "0.1.0"
edition = "2021"

[features]
trace = ["slotted-egraphs/trace"]
explanations = ["slotted-egraphs/explanations"]

[dependencies]
slotted-egraphs = "=0.0.32"
symbol_table = { version = "0.3", features = ["global"]}
memory-stats = "1.0.0"
tracing = "0.1"
# tracing-opentelemetry = "0.27.0"
tracing-subscriber = "0.3"
# tracing-profile = "0.7.0"
thread_local = "1.1.8"

[profile.release]
debug = true
